fixing CSS letter-spacing on windows. bug 327184. r=vlad