gfx/thebes/public/gfxPangoFonts.h
@@ -95,8 +95,11 @@ public:
     gfxPangoTextRun(const nsAString& aString, gfxPangoFontGroup *aFontGroup);
     ~gfxPangoTextRun();
 
-    virtual void DrawString(gfxContext *aContext, gfxPoint pt);
-    virtual gfxFloat MeasureString(gfxContext *aContext);
+    virtual void Draw(gfxContext *aContext, gfxPoint pt);
+    virtual gfxFloat Measure(gfxContext *aContext);
+
+    virtual void SetSpacing(const nsTArray<gfxFloat>& spacingArray);
+    virtual const nsTArray<gfxFloat> *const GetSpacing() const;
 
 private:
     nsString mString;
